// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hooks | default | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | default | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | default | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | default | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | default | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | default | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | default | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | default | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | default | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | default | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | default | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`hooks | filebase = true | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | filebase = true | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | filebase = true | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | filebase = true | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | filebase = true | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | filebase = true | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | filebase = true | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | filebase = true | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | filebase = true | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | filebase = true | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | filebase = true | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "default.613153351"
        })
    });
};
"
`;

exports[`hooks | hash + filebase = true | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash + filebase = true | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "bm90LWltcG9ydGVkLjYxMzE1MzM1MQ=="
        })
    });
};
export { };
"
`;

exports[`hooks | hash + filebase = true | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "bXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "bXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "bXVsdGlwbGUtdXNlcy44MzEzNzM2OTE="
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | hash + filebase = true | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "c29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "c29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "c29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        })
    });
};
"
`;

exports[`hooks | hash + filebase = true | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash + filebase = true | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "aW1wb3J0LWFzLjk0MzQ4MDE0"
        })
    });
};
export { };
"
`;

exports[`hooks | hash + filebase = true | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "d2l0aC12YWx1ZS1pbi1tZXNzYWdlLjU1NzY4NDIyMA=="
        })
    });
};
"
`;

exports[`hooks | hash + filebase = true | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "d2l0aC12YXJpYWJsZS1tZXNzYWdlLjEzMDczMjQxMDI="
        })
    });
};
"
`;

exports[`hooks | hash + filebase = true | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | hash + filebase = true | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "d2l0aC1jdXN0b20tcHJvcGVydGllcy4yOTgzODEwMjY3"
        })
    });
};
"
`;

exports[`hooks | hash + filebase = true | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "ZGVmYXVsdC42MTMxNTMzNTE="
        })
    });
};
"
`;

exports[`hooks | hash + relativeTo = "src" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash + relativeTo = "src" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subm90LWltcG9ydGVkLjYxMzE1MzM1MQ=="
        })
    });
};
export { };
"
`;

exports[`hooks | hash + relativeTo = "src" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy44MzEzNzM2OTE="
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | hash + relativeTo = "src" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        })
    });
};
"
`;

exports[`hooks | hash + relativeTo = "src" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash + relativeTo = "src" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suaW1wb3J0LWFzLjk0MzQ4MDE0"
        })
    });
};
export { };
"
`;

exports[`hooks | hash + relativeTo = "src" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC12YWx1ZS1pbi1tZXNzYWdlLjU1NzY4NDIyMA=="
        })
    });
};
"
`;

exports[`hooks | hash + relativeTo = "src" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC12YXJpYWJsZS1tZXNzYWdlLjEzMDczMjQxMDI="
        })
    });
};
"
`;

exports[`hooks | hash + relativeTo = "src" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | hash + relativeTo = "src" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC1jdXN0b20tcHJvcGVydGllcy4yOTgzODEwMjY3"
        })
    });
};
"
`;

exports[`hooks | hash + relativeTo = "src" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suZGVmYXVsdC42MTMxNTMzNTE="
        })
    });
};
"
`;

exports[`hooks | hash + removePrefix = "src/" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash + removePrefix = "src/" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subm90LWltcG9ydGVkLjYxMzE1MzM1MQ=="
        })
    });
};
export { };
"
`;

exports[`hooks | hash + removePrefix = "src/" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy44MzEzNzM2OTE="
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | hash + removePrefix = "src/" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        })
    });
};
"
`;

exports[`hooks | hash + removePrefix = "src/" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash + removePrefix = "src/" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suaW1wb3J0LWFzLjk0MzQ4MDE0"
        })
    });
};
export { };
"
`;

exports[`hooks | hash + removePrefix = "src/" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC12YWx1ZS1pbi1tZXNzYWdlLjU1NzY4NDIyMA=="
        })
    });
};
"
`;

exports[`hooks | hash + removePrefix = "src/" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC12YXJpYWJsZS1tZXNzYWdlLjEzMDczMjQxMDI="
        })
    });
};
"
`;

exports[`hooks | hash + removePrefix = "src/" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | hash + removePrefix = "src/" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC1jdXN0b20tcHJvcGVydGllcy4yOTgzODEwMjY3"
        })
    });
};
"
`;

exports[`hooks | hash + removePrefix = "src/" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suZGVmYXVsdC42MTMxNTMzNTE="
        })
    });
};
"
`;

exports[`hooks | hash base64 | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash base64 | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subm90LWltcG9ydGVkLjYxMzE1MzM1MQ=="
        })
    });
};
export { };
"
`;

exports[`hooks | hash base64 | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy44MzEzNzM2OTE="
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | hash base64 | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        })
    });
};
"
`;

exports[`hooks | hash base64 | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash base64 | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suaW1wb3J0LWFzLjk0MzQ4MDE0"
        })
    });
};
export { };
"
`;

exports[`hooks | hash base64 | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC12YWx1ZS1pbi1tZXNzYWdlLjU1NzY4NDIyMA=="
        })
    });
};
"
`;

exports[`hooks | hash base64 | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC12YXJpYWJsZS1tZXNzYWdlLjEzMDczMjQxMDI="
        })
    });
};
"
`;

exports[`hooks | hash base64 | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | hash base64 | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC1jdXN0b20tcHJvcGVydGllcy4yOTgzODEwMjY3"
        })
    });
};
"
`;

exports[`hooks | hash base64 | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suZGVmYXVsdC42MTMxNTMzNTE="
        })
    });
};
"
`;

exports[`hooks | hash murmur3 | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash murmur3 | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1381552078"
        })
    });
};
export { };
"
`;

exports[`hooks | hash murmur3 | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "2692672905"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "2692672905"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "2727763289"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | hash murmur3 | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "1582044257"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1582044257"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1582044257"
        })
    });
};
"
`;

exports[`hooks | hash murmur3 | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash murmur3 | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "1318926594"
        })
    });
};
export { };
"
`;

exports[`hooks | hash murmur3 | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "2128469604"
        })
    });
};
"
`;

exports[`hooks | hash murmur3 | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "3957501365"
        })
    });
};
"
`;

exports[`hooks | hash murmur3 | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | hash murmur3 | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "3886431347"
        })
    });
};
"
`;

exports[`hooks | hash murmur3 | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "2567587270"
        })
    });
};
"
`;

exports[`hooks | hash unknown fallback to murmur3 | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash unknown fallback to murmur3 | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1381552078"
        })
    });
};
export { };
"
`;

exports[`hooks | hash unknown fallback to murmur3 | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "2692672905"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "2692672905"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "2727763289"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | hash unknown fallback to murmur3 | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "1582044257"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1582044257"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1582044257"
        })
    });
};
"
`;

exports[`hooks | hash unknown fallback to murmur3 | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | hash unknown fallback to murmur3 | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "1318926594"
        })
    });
};
export { };
"
`;

exports[`hooks | hash unknown fallback to murmur3 | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "2128469604"
        })
    });
};
"
`;

exports[`hooks | hash unknown fallback to murmur3 | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "3957501365"
        })
    });
};
"
`;

exports[`hooks | hash unknown fallback to murmur3 | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | hash unknown fallback to murmur3 | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "3886431347"
        })
    });
};
"
`;

exports[`hooks | hash unknown fallback to murmur3 | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "2567587270"
        })
    });
};
"
`;

exports[`hooks | moduleSourceNameTest | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | moduleSourceNameTest | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | moduleSourceNameTest | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | moduleSourceNameTest | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | moduleSourceNameTest | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | moduleSourceNameTest | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | moduleSourceNameTest | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | moduleSourceNameTest | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | moduleSourceNameTest | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | moduleSourceNameTest | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | moduleSourceNameTest | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | relativeTo = "" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "../" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "../" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "../" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "../" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "../" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "../" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | relativeTo = "../" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "../" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "../" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | relativeTo = "../" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | relativeTo = "../" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | removePrefix = "src" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | does nothing if id is already provided 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | does nothing if react-intl is not imported 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | multiple uses 2`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | some supported use cases 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | useIntl with different module source 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with FormattedMessage imported as something else 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with a value interpolated in the message 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with a variable as the defaultMessage 3`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with a variable as the defaultMessage 4`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with custom properties in formatMessage call 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src.__fixtures__" | with useIntl hook imported 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | removePrefix = "src/" -- with slash | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | removePrefix = /__fixtures__/ | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = true | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = true | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = true | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | removePrefix = true | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
};
"
`;

exports[`hooks | removePrefix = true | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = true | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | removePrefix = true | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "557684220"
        })
    });
};
"
`;

exports[`hooks | removePrefix = true | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "1307324102"
        })
    });
};
"
`;

exports[`hooks | removePrefix = true | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | removePrefix = true | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "2983810267"
        })
    });
};
"
`;

exports[`hooks | removePrefix = true | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
};
"
`;

exports[`hooks | separator = "_" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | separator = "_" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___hook_not-imported_613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | separator = "_" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests___fixtures___hook_multiple-uses_613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests___fixtures___hook_multiple-uses_613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests___fixtures___hook_multiple-uses_831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | separator = "_" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests___fixtures___hook_some-supported-use-cases_613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___hook_some-supported-use-cases_613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___hook_some-supported-use-cases_613153351"
        })
    });
};
"
`;

exports[`hooks | separator = "_" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | separator = "_" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests___fixtures___hook_import-as_94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | separator = "_" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests___fixtures___hook_with-value-in-message_557684220"
        })
    });
};
"
`;

exports[`hooks | separator = "_" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests___fixtures___hook_with-variable-message_1307324102"
        })
    });
};
"
`;

exports[`hooks | separator = "_" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | separator = "_" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests___fixtures___hook_with-custom-properties_2983810267"
        })
    });
};
"
`;

exports[`hooks | separator = "_" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___hook_default_613153351"
        })
    });
};
"
`;

exports[`hooks | useKey = true | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | useKey = true | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`hooks | useKey = true | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
export { };
"
`;

exports[`hooks | useKey = true | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`hooks | useKey = true | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
export { };
"
`;

exports[`hooks | useKey = true | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
export { };
"
`;

exports[`hooks | useKey = true | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1),
            "id": "tests.__fixtures__.hook.with-value-in-message.557684220"
        })
    });
};
"
`;

exports[`hooks | useKey = true | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message,
            "id": "tests.__fixtures__.hook.with-variable-message.1307324102"
        })
    });
};
"
`;

exports[`hooks | useKey = true | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`hooks | useKey = true | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`hooks | useKey = true | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;
